views: provide feedback when editing fails

If a user selects text in a readonly textfield, all editing operations
will silently fail. This change adds a new callback, Textfield::OnKeypressUnhandled,
which serves to provide feedback in this case. Currently feedback is only
implemented for Mac in the form of a system error beep.

BUG=647523

Review-Url: https://codereview.chromium.org/2342343003
Cr-Commit-Position: refs/heads/master@{#419473}

Former-commit-id: c7da74b7ca322b813d757e0c050aa7fd479ee278