ui/views/controls/textfield/textfield.h
@@ -392,6 +392,10 @@ class VIEWS_EXPORT Textfield : public View,
   // Pastes the selection clipboard for the specified mouse event.
   void PasteSelectionClipboard(const ui::MouseEvent& event);
 
+  // Called whenever a keypress is unhandled for any reason, including failing
+  // to insert text into a readonly text field.
+  void OnKeypressUnhandled();
+
   // The text model.
   std::unique_ptr<TextfieldModel> model_;
 
